--- a/numpy_exercises_part_1.ipynb
+++ b/numpy_exercises_part_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "780ec932",
+   "id": "e73040ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "82744baa",
+   "execution_count": 3,
+   "id": "8072d30f",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "55"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,8 +32,7 @@
    "source": [
     "# Use python's built in functionality/operators to determine the following:\n",
     "# Exercise 1 - Make a variable called sum_of_a to hold the sum of all the numbers in above list\n",
-    "a = np.array(a)\n",
-    "sum_of_a = a.sum()\n",
+    "sum_of_a = sum(a)\n",
     "sum_of_a\n",
     "\n",
     "# 55"
@@ -41,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fc07b32f",
+   "execution_count": 4,
+   "id": "e85461ad",
    "metadata": {},
    "outputs": [
     {
@@ -51,14 +50,14 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 2 - Make a variable named min_of_a to hold the minimum of all the numbers in the above list\n",
-    "min_of_a = a.min()\n",
+    "min_of_a = min(a)\n",
     "min_of_a\n",
     "\n",
     "# 1"
@@ -66,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "517a5732",
+   "execution_count": 5,
+   "id": "b8d3ee59",
    "metadata": {},
    "outputs": [
     {
@@ -76,14 +75,14 @@
        "10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 3 - Make a variable named max_of_a to hold the max number of all the numbers in the above list\n",
-    "max_of_a = a.max()\n",
+    "max_of_a = max(a)\n",
     "max_of_a\n",
     "\n",
     "# 10"
@@ -91,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "318f1b82",
+   "execution_count": 6,
+   "id": "a1200785",
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +100,14 @@
        "5.5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 4 - Make a variable named mean_of_a to hold the average of all the numbers in the above list\n",
-    "mean_of_a = a.mean()\n",
+    "mean_of_a = sum(a)/len(a)\n",
     "mean_of_a\n",
     "\n",
     "# 5.5"
@@ -116,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "fb3acc2b",
+   "execution_count": 9,
+   "id": "23505de5",
    "metadata": {},
    "outputs": [
     {
@@ -126,90 +125,92 @@
        "3628800"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 5 - Make a variable named product_of_a to hold the product of multiplying all the numbers in the above list together\n",
-    "product_of_a = a.prod()\n",
+    "product_of_a = 1\n",
+    "for num in a:\n",
+    "    product_of_a *= num\n",
     "product_of_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b012082a",
+   "execution_count": 14,
+   "id": "c66cd4fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  1,   4,   9,  16,  25,  36,  49,  64,  81, 100])"
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 6 - Make a variable named squares_of_a. It should hold each number in a squared like [1, 4, 9, 16, 25...]\n",
-    "squares_of_a = a ** 2\n",
+    "squares_of_a = [num ** 2 for num in a]\n",
     "squares_of_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "be1b1643",
+   "execution_count": 12,
+   "id": "7ce953dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 3, 5, 7, 9])"
+       "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 7 - Make a variable named odds_in_a. It should hold only the odd numbers\n",
-    "odds_in_a = a[a % 2 != 0]\n",
+    "odds_in_a = [num for num in a if num % 2 != 0]\n",
     "odds_in_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "19e1ba70",
+   "execution_count": 13,
+   "id": "72d2849d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2,  4,  6,  8, 10])"
+       "[2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercise 8 - Make a variable named evens_in_a. It should hold only the evens.\n",
-    "evens_in_a = a[a % 2 == 0]\n",
+    "evens_in_a = [num for num in a if num % 2 == 0]\n",
     "evens_in_a"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1569370d",
+   "id": "44f03736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "01055822",
+   "id": "cc6bc97d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e21a8221",
+   "id": "e81134f2",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "998a0364",
+   "id": "d5bfec94",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f2e0fab6",
+   "id": "71102802",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3b95db8b",
+   "id": "cff26b91",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "26bcc913",
+   "id": "3573c6e0",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "01fb5057",
+   "id": "0980445f",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e4287264",
+   "id": "4eda3fc7",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a244c1e2",
+   "id": "77e51738",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c53f44cb",
+   "id": "708ae099",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9adfa781",
+   "id": "121a64a9",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6cc085fa",
+   "id": "2d805e24",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "34b9f720",
+   "id": "58abb1db",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "19c8d7e6",
+   "id": "9ca9b465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c5735093",
+   "id": "14117752",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "41f64b56",
+   "id": "99bbe618",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c13c3ef",
+   "id": "a04adea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "38d36403",
+   "id": "58f7c375",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c17851ad",
+   "id": "9d19c626",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "09f9fe17",
+   "id": "42532103",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2404843e",
+   "id": "a6d515a7",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "84077cc6",
+   "id": "9dfb9a9e",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "dda39fd4",
+   "id": "6cd974b6",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "52d78d1b",
+   "id": "fa23b857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "60648439",
+   "id": "27eeb3eb",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7329e0d3",
+   "id": "22a0574b",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "54f18b80",
+   "id": "dcd54600",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d421d9ce",
+   "id": "5714c044",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "23bdf33d",
+   "id": "f183e123",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "4293c47e",
+   "id": "22c09bc8",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e3b553da",
+   "id": "bc71d446",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6f4e9b35",
+   "id": "196e4c4c",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7488c083",
+   "id": "75733f4d",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c6c2494a",
+   "id": "8934b883",
    "metadata": {},
    "outputs": [
     {
