updated a few answers to setup 2

--- a/numpy_exercises_part_1.ipynb
+++ b/numpy_exercises_part_1.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "cc6bc97d",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "e81134f2",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "33"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,15 +256,13 @@
     "#     sum_of_b += sum(row)\n",
     "\n",
     "b = np.array(b)\n",
-    "sum_of_b = 0\n",
-    "for row in b:\n",
-    "    sum_of_b += row.sum()\n",
-    "sum_of_b"
+    "sum_of_b = b.sum()\n",
+    "b.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "d5bfec94",
    "metadata": {},
    "outputs": [
@@ -274,7 +272,7 @@
        "3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,16 +281,13 @@
     "# Exercise 2 - refactor the following to use numpy. \n",
     "# min_of_b = min(b[0]) if min(b[0]) <= min(b[1]) else min(b[1]) \n",
     "# min_of_b\n",
-    "if b[0].min()<= b[1].min():\n",
-    "    min_of_b = b[0].min()\n",
-    "else:\n",
-    "    min_of_b = b[1].min()\n",
+    "min_of_b = b.min()\n",
     "min_of_b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "71102802",
    "metadata": {},
    "outputs": [
@@ -302,7 +297,7 @@
        "8"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,10 +305,7 @@
    "source": [
     "# Exercise 3 - refactor the following maximum calculation to find the answer with numpy.\n",
     "# max_of_b = max(b[0]) if max(b[0]) >= max(b[1]) else max(b[1])\n",
-    "if b[0].max()>= b[1].max():\n",
-    "    max_of_b = b[0].max()\n",
-    "else:\n",
-    "    max_of_b = b[1].max()\n",
+    "max_of_b = b.max()\n",
     "max_of_b"
    ]
   },
@@ -548,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "9ca9b465",
    "metadata": {},
    "outputs": [],
@@ -563,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "14117752",
    "metadata": {},
    "outputs": [
@@ -573,6 +565,7 @@
      "text": [
       "1\n",
       "9\n",
+      "45\n",
       "362880\n"
      ]
     }
@@ -583,6 +576,7 @@
     "c = np.array(c)\n",
     "print(c.min())\n",
     "print(c.max())\n",
+    "print(c.sum())\n",
     "print(c.prod())"
    ]
   },
