--- a/pandas_notes.ipynb
+++ b/pandas_notes.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "## Create a series\n",
-    "We can use the pandas Series constructor functino to create a Series:\n"
+    "We can use the pandas Series constructor function to create a Series:\n"
    ]
   },
   {
@@ -706,6 +706,24 @@
     "    'mean': numbers_series.mean()\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# .nlargest()\n",
+    "# .nsmallest()\n",
+    "# These methods return the n largest or n smallest values from a pandas Series.\n",
+    "# Can set the *keep* parameter to *first*, *last*, or *all* to deal with duplicate largest or smallest values\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
