--- a/pandas_notes.ipynb
+++ b/pandas_notes.ipynb
@@ -710,20 +710,215 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92ad464c",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# .nlargest()\n",
     "# .nsmallest()\n",
     "# These methods return the n largest or n smallest values from a pandas Series.\n",
     "# Can set the *keep* parameter to *first*, *last*, or *all* to deal with duplicate largest or smallest values\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "\n",
+    "# Default argument for keep:\n",
+    "Series.nlargest(n=5, keep='first')\n",
+    "Series.nsmallest(n=5, keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ed519302",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    100\n",
+       "Name: Numbers, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   }
+   ],
+   "source": [
+    "numbers_series.nlargest(n=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6ac078f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    17\n",
+       "4    17\n",
+       "Name: Numbers, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If I want to return all of the lowest values, not just the first instance.\n",
+    "\n",
+    "numbers_series.nsmallest(n=1, keep='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e8d8a2e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    a\n",
+       "1    e\n",
+       "2    h\n",
+       "3    d\n",
+       "4    b\n",
+       "5    z\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .sort_values\n",
+    "# .sort_index\n",
+    "# These methods allow you to either sort your Series values or index respectively in ascending or descending order\n",
+    "\n",
+    "letters_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "3ee85b69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    a\n",
+       "4    b\n",
+       "3    d\n",
+       "1    e\n",
+       "2    h\n",
+       "5    z\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letters_series.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "7163ee99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5    z\n",
+       "2    h\n",
+       "1    e\n",
+       "3    d\n",
+       "4    b\n",
+       "0    a\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The Series values retain their index from the original Series.\n",
+    "\n",
+    "letters_series.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5fca2469",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    a\n",
+       "1    b\n",
+       "2    d\n",
+       "3    e\n",
+       "4    h\n",
+       "5    z\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I can reset the index using this parameter if that meets my needs.\n",
+    "\n",
+    "letters_series.sort_values(ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a1102a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "f    5.5\n",
+       "e    4.0\n",
+       "d    3.5\n",
+       "c    2.0\n",
+       "b    1.5\n",
+       "a    0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I can also sort by index values.\n",
+    "\n",
+    "labeled_series.sort_index(ascending=False)"
+   ]
   }
  ],
  "metadata": {
