updated answers to part 3

--- a/advanced_dataframes.ipynb
+++ b/advanced_dataframes.ipynb
@@ -3136,6 +3136,7 @@
    ],
    "source": [
     "# 2. What is the total price for each order?\n",
+    "# orders['item_price'] = orders.item_price.str.replace('$','').astype('float')\n",
     "\n",
     "changetype = lambda x: float(x[1:-1])\n",
     "chipo['item_price'] = chipo['item_price'].apply(changetype) \n",
@@ -3459,7 +3460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 174,
    "id": "27243f10",
    "metadata": {
     "scrolled": true
@@ -3467,19 +3468,81 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Assistant Engineer</td>\n",
+       "      <td>1999-12-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>2000-01-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Manager</td>\n",
+       "      <td>1992-02-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Senior Staff</td>\n",
+       "      <td>2000-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>2000-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Technique Leader</td>\n",
+       "      <td>1999-12-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "title\n",
-       "Assistant Engineer    2000-02-01\n",
-       "Engineer              2002-08-01\n",
-       "Manager               1996-08-30\n",
-       "Senior Engineer       2002-08-01\n",
-       "Senior Staff          2002-08-01\n",
-       "Staff                 2000-02-01\n",
-       "Technique Leader      2000-02-01\n",
-       "Name: from_date, dtype: object"
+       "                title   hire_date\n",
+       "0  Assistant Engineer  1999-12-24\n",
+       "1            Engineer  2000-01-28\n",
+       "2             Manager  1992-02-05\n",
+       "3     Senior Engineer  2000-01-01\n",
+       "4        Senior Staff  2000-01-13\n",
+       "5               Staff  2000-01-12\n",
+       "6    Technique Leader  1999-12-31"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3487,12 +3550,12 @@
    "source": [
     "# 6. For each title, find the hire date of the employee that was hired most recently with that title.\n",
     "\n",
-    "et.groupby('title').from_date.max()"
+    "et.groupby('title').hire_date.max().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 179,
    "id": "2ddb5f27",
    "metadata": {
     "scrolled": true
@@ -3613,7 +3676,7 @@
        "[489903 rows x 3 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3630,12 +3693,14 @@
     "'''\n",
     "\n",
     "dept_emp_titles = pd.read_sql(query, get_db_url)\n",
-    "dept_emp_titles"
+    "dept_emp_titles\n",
+    "\n",
+    "# dept_emp_titles.groupby(['title', 'dept_name'])[['emp_no']].count().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 176,
    "id": "d08583d0",
    "metadata": {
     "scrolled": true
@@ -3826,7 +3891,7 @@
        "All                       102623  118822             16737  489903  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
