--- a/churn_analysis.ipynb
+++ b/churn_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8c4a5f9b",
+   "id": "c62d9088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5904f51e",
+   "id": "3323f590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c25a2f0b",
+   "id": "e8d3752e",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b5bf05ab",
+   "id": "e88b0d38",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef312a2a",
+   "id": "b213857f",
    "metadata": {},
    "source": [
     "**Step 1: Understand your data?**\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "96812500",
+   "id": "41cd46bf",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7eb70514",
+   "id": "6446b929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4a69896c",
+   "id": "4d2b37dd",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "389e2875",
+   "id": "72f043c5",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b5f78a8f",
+   "id": "0eebe1d2",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f698c1e9",
+   "id": "af7cb828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "20822288",
+   "id": "b8dffdb8",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ae722cf2",
+   "id": "82153af1",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "805e8988",
+   "id": "48f0c9e9",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0b445e8c",
+   "id": "9f402956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0feb7e39",
+   "id": "b5ae3a31",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2c1f07cd",
+   "id": "368cd508",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13ea8304",
+   "id": "750b3054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af5c8eee",
+   "id": "6106d87e",
    "metadata": {},
    "source": [
     "------------------------------------"
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cf1b4b13",
+   "id": "44249519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f34acf20",
+   "id": "b6fc8852",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b255e6ef",
+   "id": "31d0b0c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "de223a55",
+   "id": "f1df8951",
    "metadata": {
     "scrolled": true
    },
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3391f150",
+   "id": "ce33e1af",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf8a19f",
+   "id": "8d8ddcdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad17288",
+   "id": "eefad035",
    "metadata": {},
    "source": [
     "------------------------------------"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "66a4812f",
+   "id": "81bf45ec",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ec2cbcc5",
+   "id": "ad588714",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cace0533",
+   "id": "88f296e1",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "50d702f3",
+   "id": "ea9e7d14",
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "986ac08d",
+   "id": "55310d4a",
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5939af59",
+   "id": "bfce1050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "9d331f21",
+   "id": "9b68e92a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8696a4c9",
+   "id": "324e66df",
    "metadata": {},
    "outputs": [
     {
@@ -1294,12 +1294,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71ce6cd6",
+   "cell_type": "markdown",
+   "id": "8b6c747a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "85ae88f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>churn</th>\n",
+       "      <th>No</th>\n",
+       "      <th>Yes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>payment_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bank transfer (automatic)</th>\n",
+       "      <td>0.832471</td>\n",
+       "      <td>0.167529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Credit card (automatic)</th>\n",
+       "      <td>0.847669</td>\n",
+       "      <td>0.152331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Electronic check</th>\n",
+       "      <td>0.547146</td>\n",
+       "      <td>0.452854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mailed check</th>\n",
+       "      <td>0.807980</td>\n",
+       "      <td>0.192020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "churn                            No       Yes\n",
+       "payment_type                                 \n",
+       "Bank transfer (automatic)  0.832471  0.167529\n",
+       "Credit card (automatic)    0.847669  0.152331\n",
+       "Electronic check           0.547146  0.452854\n",
+       "Mailed check               0.807980  0.192020"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# payment type and churn\n",
+    "\n",
+    "payment_type_churn = pd.crosstab(df.payment_type, df.churn, normalize = 'index')\n",
+    "payment_type_churn"
+   ]
   }
  ],
  "metadata": {
