--- a/churn_analysis.ipynb
+++ b/churn_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c62d9088",
+   "id": "c57b5aa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3323f590",
+   "id": "5b90d3a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8d3752e",
+   "id": "406269a9",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e88b0d38",
+   "id": "0f110199",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b213857f",
+   "id": "382e5a4b",
    "metadata": {},
    "source": [
     "**Step 1: Understand your data?**\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "41cd46bf",
+   "id": "ed3858cb",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6446b929",
+   "id": "8283d2fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4d2b37dd",
+   "id": "aff6d9a3",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "72f043c5",
+   "id": "94e008ce",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0eebe1d2",
+   "id": "662aed7b",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af7cb828",
+   "id": "71710349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b8dffdb8",
+   "id": "69e95a56",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "82153af1",
+   "id": "10bb65eb",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "48f0c9e9",
+   "id": "9d05a95c",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9f402956",
+   "id": "3b9f550e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b5ae3a31",
+   "id": "b716cfe2",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "368cd508",
+   "id": "9d4ecfca",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "750b3054",
+   "id": "5ef43e16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6106d87e",
+   "id": "342cf8ba",
    "metadata": {},
    "source": [
     "------------------------------------"
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "44249519",
+   "id": "1cd49e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b6fc8852",
+   "id": "d5c18491",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "31d0b0c9",
+   "id": "3f8cbdcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f1df8951",
+   "id": "985d5937",
    "metadata": {
     "scrolled": true
    },
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ce33e1af",
+   "id": "10801c44",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d8ddcdd",
+   "id": "24131ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefad035",
+   "id": "0822918c",
    "metadata": {},
    "source": [
     "------------------------------------"
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "81bf45ec",
+   "id": "517338f4",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ad588714",
+   "id": "b1ef5e47",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "88f296e1",
+   "id": "cd188cf4",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ea9e7d14",
+   "id": "126f6ace",
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "55310d4a",
+   "id": "5c870689",
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "bfce1050",
+   "id": "3ffbf02e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "9b68e92a",
+   "id": "96f669ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "324e66df",
+   "id": "656c8d1e",
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b6c747a",
+   "id": "2b15dfe0",
    "metadata": {},
    "source": [
     "------------------------------------"
@@ -1304,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "85ae88f3",
+   "id": "7a889237",
    "metadata": {},
    "outputs": [
     {
@@ -1382,6 +1382,377 @@
     "payment_type_churn = pd.crosstab(df.payment_type, df.churn, normalize = 'index')\n",
     "payment_type_churn"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96d50e3f",
+   "metadata": {},
+   "source": [
+    "------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "7bbc513e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16068062.85"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total revenue from all customers\n",
+    "\n",
+    "df.total_charges.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "93f3cbb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>is_senior_citizen</th>\n",
+       "      <th>partner</th>\n",
+       "      <th>dependents</th>\n",
+       "      <th>phone_service</th>\n",
+       "      <th>internet_service</th>\n",
+       "      <th>contract_type</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>churn</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>churn_bol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0002-ORFBO</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1 line</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>65.6</td>\n",
+       "      <td>593.30</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0003-MKNFE</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2 or more lines</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>542.40</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0004-TLHLJ</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1 line</td>\n",
+       "      <td>Fiber</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>73.9</td>\n",
+       "      <td>280.85</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0011-IGKFF</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1 line</td>\n",
+       "      <td>Fiber</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1237.85</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0013-EXCHZ</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1 line</td>\n",
+       "      <td>Fiber</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>267.40</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  customer_id  gender  is_senior_citizen partner dependents    phone_service  \\\n",
+       "0  0002-ORFBO  Female                  0     Yes        Yes           1 line   \n",
+       "1  0003-MKNFE    Male                  0      No         No  2 or more lines   \n",
+       "2  0004-TLHLJ    Male                  0      No         No           1 line   \n",
+       "3  0011-IGKFF    Male                  1     Yes         No           1 line   \n",
+       "4  0013-EXCHZ  Female                  1     Yes         No           1 line   \n",
+       "\n",
+       "  internet_service  contract_type      payment_type  monthly_charges  \\\n",
+       "0              DSL              1      Mailed check             65.6   \n",
+       "1              DSL              0      Mailed check             59.9   \n",
+       "2            Fiber              0  Electronic check             73.9   \n",
+       "3            Fiber              0  Electronic check             98.0   \n",
+       "4            Fiber              0      Mailed check             83.9   \n",
+       "\n",
+       "   total_charges churn  tenure  churn_bol  \n",
+       "0         593.30    No     9.0          0  \n",
+       "1         542.40    No     9.1          0  \n",
+       "2         280.85   Yes     3.8          1  \n",
+       "3        1237.85   Yes    12.6          1  \n",
+       "4         267.40   Yes     3.2          1  "
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "330fc65a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contract_type\n",
+       "0    3876\n",
+       "1    1475\n",
+       "2    1687\n",
+       "Name: total_charges, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('contract_type').total_charges.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "89e9719b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contract_type\n",
+       "0    5305892.00\n",
+       "1    4476429.65\n",
+       "2    6285741.20\n",
+       "Name: total_charges, dtype: float64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Revenue from month-to-month customers\n",
+    "\n",
+    "df.groupby('contract_type').total_charges.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "e41c6a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contract_type\n",
+       "0    1368.909185\n",
+       "1    3034.867559\n",
+       "2    3725.987670\n",
+       "Name: total_charges, dtype: float64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('contract_type').total_charges.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "37949064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contract_type\n",
+       "0    66.389229\n",
+       "1    65.092475\n",
+       "2    60.823977\n",
+       "Name: monthly_charges, dtype: float64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('contract_type').monthly_charges.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "98d6639d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2075"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## assume 30% monthly contract convert to 1 year 20% and 2 year 10%\n",
+    "\n",
+    "# 3876 * 0.3 = 1163\n",
+    "# 3876 * 0.7 = 2713\n",
+    "\n",
+    "# 1 year count:\n",
+    "# 1476 + 775 = 2251\n",
+    "\n",
+    "# 2 year count:\n",
+    "1687 + 388 = 2075"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420b3cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 year conut expected avenue:\n",
+    "2251 * 65.092475 * "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "eb997d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "churn\n",
+       "No     3378679.25\n",
+       "Yes    1927212.75\n",
+       "Name: total_charges, dtype: float64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.contract_type == 0].groupby('churn').total_charges.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a972da2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
